--- a/index.html
+++ b/index.html
@@ -319,12 +319,12 @@
                     <td>12.06.2025</td>
                     <td>Izvoz</td>
                     <td>ABC Trading Ltd.</td>
-                    <td>Mašinski delovi</td>
+                    <td>Zobene Pahuljice</td>
                     <td>1,250</td>
                     <td>€15,000</td>
                     <td><span class="status-zavrseno">Završeno</span></td>
                     <td><span class="priority-normal">Normalan</span></td>
-                    <td>Marko Petrović</td>
+                    <td>Zlatan Šehić</td>
                     <td>10.06.2025</td>
                     <td>11.06.2025</td>
                     <td>Bez problema</td>
@@ -334,29 +334,29 @@
                     <td>IM-2025-001</td>
                     <td>11.06.2025</td>
                     <td>Uvoz</td>
-                    <td>DEF Solutions</td>
-                    <td>Elektronske komponente</td>
+                    <td>Cavas International</td>
+                    <td>Mljevena Paprika</td>
                     <td>850</td>
                     <td>€22,500</td>
                     <td><span class="status-u-toku">U toku</span></td>
                     <td><span class="priority-high">Hitno</span></td>
-                    <td>Ana Jovanović</td>
+                    <td>Vildana Dizdarević</td>
                     <td>13.06.2025</td>
                     <td>15.06.2025</td>
-                    <td>Čeka se fito sertifikat</td>
+                    <td>Čeka se fito certifikat</td>
                     <td><button class="btn btn-primary" onclick="editShipment(2)">Uredi</button></td>
                 </tr>
                 <tr>
                     <td>EX-2025-002</td>
                     <td>10.06.2025</td>
                     <td>Izvoz</td>
-                    <td>GHI International</td>
-                    <td>Tekstil</td>
+                    <td>Google</td>
+                    <td>IQF Strawberry</td>
                     <td>2,100</td>
                     <td>€8,750</td>
                     <td><span class="status-problem">Problem</span></td>
                     <td><span class="priority-high">Hitno</span></td>
-                    <td>Stefan Nikolić</td>
+                    <td>Henry Tjahjoko</td>
                     <td>08.06.2025</td>
                     <td>-</td>
                     <td>Kamion u kvaru</td>
@@ -366,13 +366,13 @@
                     <td>IM-2025-002</td>
                     <td>09.06.2025</td>
                     <td>Uvoz</td>
-                    <td>JKL Corp</td>
-                    <td>Sirovine</td>
+                    <td>Alex 2002 S</td>
+                    <td>Susam</td>
                     <td>3,400</td>
                     <td>€12,300</td>
                     <td><span class="status-nova">Nova</span></td>
                     <td><span class="priority-medium">Srednji</span></td>
-                    <td>Milica Stojanović</td>
+                    <td>Gordana Marković</td>
                     <td>14.06.2025</td>
                     <td>16.06.2025</td>
                     <td>Priprema dokumentacije</td>
