--- a/index.html
+++ b/index.html
@@ -533,7 +533,7 @@ function deleteShipment(id) {
                         value: '€15,000',
                         status: 'zavrseno',
                         priority: 'normalan',
-                        responsible: 'Marko Petrović',
+                        responsible: 'Zlatan Šehić',
                         loadDate: '2025-06-10',
                         deliveryDate: '2025-06-11',
                         notes: 'Bez problema'
@@ -549,7 +549,7 @@ function deleteShipment(id) {
                         value: '€22,500',
                         status: 'u-toku',
                         priority: 'hitno',
-                        responsible: 'Ana Jovanović',
+                        responsible: 'Vildana Dizdarević',
                         loadDate: '2025-06-13',
                         deliveryDate: '2025-06-15',
                         notes: 'Čeka se fito sertifikat'
@@ -565,7 +565,7 @@ function deleteShipment(id) {
                         value: '€8,750',
                         status: 'problem',
                         priority: 'hitno',
-                        responsible: 'Stefan Nikolić',
+                        responsible: 'Henry Tjahjoko',
                         loadDate: '2025-06-08',
                         deliveryDate: '',
                         notes: 'Kamion u kvaru'
@@ -581,7 +581,7 @@ function deleteShipment(id) {
                         value: '€12,300',
                         status: 'nova',
                         priority: 'srednji',
-                        responsible: 'Milica Stojanović',
+                        responsible: 'Zlatan Šehić',
                         loadDate: '2025-06-14',
                         deliveryDate: '2025-06-16',
                         notes: 'Priprema dokumentacije'
