--- a/index.html
+++ b/index.html
@@ -527,8 +527,8 @@ function deleteShipment(id) {
                         refNumber: 'EX-2025-001',
                         date: '2025-06-12',
                         type: 'izvoz',
-                        partner: 'ABC Trading Ltd.',
-                        goods: 'Mašinski delovi',
+                        partner: 'Cavas International BV',
+                        goods: 'IQF Strawberry',
                         weight: 1250,
                         value: '€15,000',
                         status: 'zavrseno',
@@ -544,7 +544,7 @@ function deleteShipment(id) {
                         date: '2025-06-11',
                         type: 'uvoz',
                         partner: 'DEF Solutions',
-                        goods: 'Elektronske komponente',
+                        goods: 'Sjemenke',
                         weight: 850,
                         value: '€22,500',
                         status: 'u-toku',
@@ -552,7 +552,7 @@ function deleteShipment(id) {
                         responsible: 'Vildana Dizdarević',
                         loadDate: '2025-06-13',
                         deliveryDate: '2025-06-15',
-                        notes: 'Čeka se fito sertifikat'
+                        notes: 'Čeka se fito certifikat'
                     },
                     {
                         id: 3,
